09-TargetGroup.tf
resource "aws_lb_target_group" "ninja_app_1_tg" {
  name        = "ninja-app-1-target-group"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.ninja_app_1.id
  target_type = "instance"

  health_check {
    enabled             = true
    interval            = 30
    path                = "/"
    protocol            = "HTTP"
    healthy_threshold   = 5
    unhealthy_threshold = 2
    timeout             = 5
    matcher             = "200"
  }

  tags = {
    Name    = "ninja_app_1_TargetGroup"
    Service = "ninja_app_1"
    Owner   = "Christo"
    Planet  = "Illini"
  }
}
